manifests/greeter-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter
  namespace: greeter-app
spec:
  selector:
    app: greeter
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
