manifests/greeter-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeter
  namespace: greeter-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # load balancer created in public subnets
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greeter
                port:
                  number: 5000
